remove shared rest - fix java tests